--- a/index.html
+++ b/index.html
@@ -100,8 +100,7 @@
 
                 <div class="services__content">
                     <div class="services__content__description">
-                        <input type="checkbox" class="read-more-checkbox" id="read-more">
-
+                        
                         <div class="services__content__description__text active" id="brands">
                             <p>Мы являемся авторизованным сервисным центром по ремонту техники Dell. Только у нас вы можете отремонтировать свой ноутбук Dell с официальной гарантией производителя.</p>
                             <p>Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера, что подтверждает большое количество постоянных клиентов. Мы гордимся тем, что к нам обращаются по рекомендациям и, в свою очередь, советуют нас родным и близким.</p>
@@ -127,7 +126,7 @@
                             <p>reviews</p>
                         </div>
 
-                        <label for="read-more" class="services__content__description__btn"></label>
+                        <button type="button" class="button-readmore">Читать далее</button>
                     </div>
 
                     <picture class="services__content__img">
