--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Block 1.3</title>
+    <title>CPS</title>
     <link href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" rel="stylesheet">
-    <link href="./src/normalize.css" rel="stylesheet">
-    <link href="./src/fonts.css" rel="stylesheet">
-    <link href="./src/style.css" rel="stylesheet">
+    <link href="src/normalize.css" rel="stylesheet">
+    <link href="src/fonts.css" rel="stylesheet">
+    <link href="src/style.css" rel="stylesheet">
 </head>
 
 <body>
