--- a/index.html
+++ b/index.html
@@ -266,27 +266,27 @@
                                 
                                 <button type="button" class="swiper-slide swiper-slide__card equipment">
                                     <span class="equipment__card-text">Ремонт ноутбуков</span>
-                                    <div type="button" class="card-button card-button--equipment"></div>
+                                    <div class="card-button card-button--equipment"></div>
                                 </button>
                                 <button type="button" class="swiper-slide swiper-slide__card equipment">
                                     <span class="equipment__card-text">Ремонт планшетов</span>
-                                    <div type="button" class="card-button card-button--equipment"></div>
+                                    <div class="card-button card-button--equipment"></div>
                                 </button>
                                 <button type="button" class="swiper-slide swiper-slide__card equipment">
                                     <span class="equipment__card-text">Ремонт ПК</span>
-                                    <div type="button" class="card-button card-button--equipment"></div>
+                                    <div class="card-button card-button--equipment"></div>
                                 </button>
                                 <button type="button" class="swiper-slide swiper-slide__card equipment">
                                     <span class="equipment__card-text">Ремонт мониторов</span>
-                                    <div type="button" class="card-button card-button--equipment"></div>
+                                    <div class="card-button card-button--equipment"></div>
                                 </button>
                                 <button type="button" class="swiper-slide swiper-slide__card equipment">
                                     <span class="equipment__card-text">Ремонт зарядок</span>
-                                    <div type="button" class="card-button card-button--equipment"></div>
+                                    <div class="card-button card-button--equipment"></div>
                                 </button>
                                 <button type="button" class="swiper-slide swiper-slide__card equipment">
                                     <span class="equipment__card-text">Ремонт телевизоров</span>
-                                    <div type="button" class="card-button card-button--equipment"></div>
+                                    <div class="card-button card-button--equipment"></div>
                                 </button>
                             </div>
                             <div class="swiper-pagination"></div>
